[package]
name = "socket-priority"
version = "0.1.3"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "Set a priority on a raw socket"
license = "ISC"
homepage = "https://github.com/jedisct1/rust-socket-priority"
repository = "https://github.com/jedisct1/rust-socket-priority"
categories = ["os::unix-apis"]

[badges]
travis-ci = { repository = "jedisct1/rust-socket-priority" }

[dependencies]
clippy = {version = "~0", optional = true}
libc = "~0.2"
